H3CIPMSJAVA-20180830/src/objects/Big_Account__c.object
<CustomObject>
    <fields>
        <fullName>Engineers__c</fullName>
        <label>Engineers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center__c</fullName>
        <label>维修中心</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Big Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>